update README.md, rename disney_stocks, and update get_data.ipynb

--- a/get_data.ipynb
+++ b/get_data.ipynb
@@ -632,7 +632,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dis_df.to_csv('disney_stonks.csv')"
+    "dis_df.to_csv('disney_stocks.csv')"
    ]
   }
  ],
