add 4 other brands data to csvs

--- a/combine.ipynb
+++ b/combine.ipynb
@@ -12,20 +12,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Gross Income</th>\n",
+       "      <th>Max Theaters</th>\n",
+       "      <th>Opening Earnings</th>\n",
+       "      <th>Opening Num Theaters</th>\n",
+       "      <th>Release Dates</th>\n",
+       "      <th>Studio</th>\n",
+       "      <th>Brand</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Avengers: Endgame</td>\n",
+       "      <td>$858,373,000</td>\n",
+       "      <td>4,662</td>\n",
+       "      <td>$357,115,007</td>\n",
+       "      <td>4,662</td>\n",
+       "      <td>Apr 26, 2019</td>\n",
+       "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Marvel Comics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Spider-Man: No Way Home</td>\n",
+       "      <td>$804,793,477</td>\n",
+       "      <td>4,336</td>\n",
+       "      <td>$260,138,569</td>\n",
+       "      <td>4,336</td>\n",
+       "      <td>Dec 17, 2021</td>\n",
+       "      <td>Sony Pictures Releasing</td>\n",
+       "      <td>Marvel Comics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Black Panther</td>\n",
+       "      <td>$700,059,566</td>\n",
+       "      <td>4,084</td>\n",
+       "      <td>$202,003,951</td>\n",
+       "      <td>4,084</td>\n",
+       "      <td>Feb 16, 2018</td>\n",
+       "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Marvel Comics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Avengers: Infinity War</td>\n",
+       "      <td>$678,815,482</td>\n",
+       "      <td>4,474</td>\n",
+       "      <td>$257,698,183</td>\n",
+       "      <td>4,474</td>\n",
+       "      <td>Apr 27, 2018</td>\n",
+       "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Marvel Comics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>The Avengers</td>\n",
+       "      <td>$623,357,910</td>\n",
+       "      <td>4,349</td>\n",
+       "      <td>$207,438,708</td>\n",
+       "      <td>4,349</td>\n",
+       "      <td>May 4, 2012</td>\n",
+       "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Marvel Comics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>206</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Bears</td>\n",
+       "      <td>$17,780,194</td>\n",
+       "      <td>1,790</td>\n",
+       "      <td>$4,776,267</td>\n",
+       "      <td>1,790</td>\n",
+       "      <td>Apr 18, 2014</td>\n",
+       "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Disneynature</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>207</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Monkey Kingdom</td>\n",
+       "      <td>$16,432,322</td>\n",
+       "      <td>2,012</td>\n",
+       "      <td>$4,577,861</td>\n",
+       "      <td>2,012</td>\n",
+       "      <td>Apr 17, 2015</td>\n",
+       "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Disneynature</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>208</th>\n",
+       "      <td>6</td>\n",
+       "      <td>African Cats</td>\n",
+       "      <td>$15,428,747</td>\n",
+       "      <td>1,224</td>\n",
+       "      <td>$6,003,200</td>\n",
+       "      <td>1,224</td>\n",
+       "      <td>Apr 22, 2011</td>\n",
+       "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Disneynature</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>209</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Born in China</td>\n",
+       "      <td>$13,873,211</td>\n",
+       "      <td>1,508</td>\n",
+       "      <td>$4,790,367</td>\n",
+       "      <td>1,508</td>\n",
+       "      <td>Apr 21, 2017</td>\n",
+       "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Disneynature</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>210</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Penguins</td>\n",
+       "      <td>$7,699,452</td>\n",
+       "      <td>1,815</td>\n",
+       "      <td>$2,282,593</td>\n",
+       "      <td>1,815</td>\n",
+       "      <td>Apr 17, 2019</td>\n",
+       "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Disneynature</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>211 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Rank                    Title  Gross Income Max Theaters  \\\n",
+       "0       1        Avengers: Endgame  $858,373,000        4,662   \n",
+       "1       2  Spider-Man: No Way Home  $804,793,477        4,336   \n",
+       "2       3            Black Panther  $700,059,566        4,084   \n",
+       "3       4   Avengers: Infinity War  $678,815,482        4,474   \n",
+       "4       5             The Avengers  $623,357,910        4,349   \n",
+       "..    ...                      ...           ...          ...   \n",
+       "206     4                    Bears   $17,780,194        1,790   \n",
+       "207     5           Monkey Kingdom   $16,432,322        2,012   \n",
+       "208     6             African Cats   $15,428,747        1,224   \n",
+       "209     7            Born in China   $13,873,211        1,508   \n",
+       "210     8                 Penguins    $7,699,452        1,815   \n",
+       "\n",
+       "    Opening Earnings Opening Num Theaters Release Dates  \\\n",
+       "0       $357,115,007                4,662  Apr 26, 2019   \n",
+       "1       $260,138,569                4,336  Dec 17, 2021   \n",
+       "2       $202,003,951                4,084  Feb 16, 2018   \n",
+       "3       $257,698,183                4,474  Apr 27, 2018   \n",
+       "4       $207,438,708                4,349   May 4, 2012   \n",
+       "..               ...                  ...           ...   \n",
+       "206       $4,776,267                1,790  Apr 18, 2014   \n",
+       "207       $4,577,861                2,012  Apr 17, 2015   \n",
+       "208       $6,003,200                1,224  Apr 22, 2011   \n",
+       "209       $4,790,367                1,508  Apr 21, 2017   \n",
+       "210       $2,282,593                1,815  Apr 17, 2019   \n",
+       "\n",
+       "                                  Studio          Brand  \n",
+       "0    Walt Disney Studios Motion Pictures  Marvel Comics  \n",
+       "1                Sony Pictures Releasing  Marvel Comics  \n",
+       "2    Walt Disney Studios Motion Pictures  Marvel Comics  \n",
+       "3    Walt Disney Studios Motion Pictures  Marvel Comics  \n",
+       "4    Walt Disney Studios Motion Pictures  Marvel Comics  \n",
+       "..                                   ...            ...  \n",
+       "206  Walt Disney Studios Motion Pictures   Disneynature  \n",
+       "207  Walt Disney Studios Motion Pictures   Disneynature  \n",
+       "208  Walt Disney Studios Motion Pictures   Disneynature  \n",
+       "209  Walt Disney Studios Motion Pictures   Disneynature  \n",
+       "210  Walt Disney Studios Motion Pictures   Disneynature  \n",
+       "\n",
+       "[211 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Marvel Comics, Lucasfilm, Pixar, Walt Disney Animation Studios, Blue Sky Studios, Disney Channel, DisneyToon Studios, Disneynature\n",
     "marvel = pd.read_csv('marvel_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
-    "disney_animation = pd.read_csv('disney_animation_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
-    "pixar = pd.read_csv('pixar_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
     "lucas = pd.read_csv('lucasfilm_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
-    "disney = pd.concat([disney_animation, pixar, lucas, marvel], ignore_index=True)"
+    "pixar = pd.read_csv('pixar_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
+    "disney_animation = pd.read_csv('disney_animation_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
+    "blue_sky = pd.read_csv('blue_sky_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
+    "disney_channel = pd.read_csv('disney_channel_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
+    "disneytoon = pd.read_csv('disneytoon_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
+    "disneynature = pd.read_csv('disneynature_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
+    "\n",
+    "marvel['Brand'] = 'Marvel Comics'\n",
+    "lucas['Brand'] = 'Lucasfilm'\n",
+    "pixar['Brand'] = 'Pixar'\n",
+    "disney_animation['Brand'] = 'Walt Disney Animation Studios'\n",
+    "blue_sky['Brand'] = 'Blue Sky Studios'\n",
+    "disney_channel['Brand'] = 'Disney Channel'\n",
+    "disneytoon['Brand'] = 'DisneyToon Studios'\n",
+    "disneynature['Brand'] = 'Disneynature'\n",
+    "\n",
+    "disney = pd.concat([marvel, lucas, pixar, disney_animation, blue_sky, disney_channel, disneytoon, disneynature], ignore_index=True)\n",
+    "disney"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,14 +269,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "174\n"
+      "211\n"
      ]
     },
     {
@@ -74,6 +308,7 @@
        "      <th>Opening Num Theaters</th>\n",
        "      <th>Release Dates</th>\n",
        "      <th>Studio</th>\n",
+       "      <th>Brand</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -87,6 +322,7 @@
        "      <td>4,134</td>\n",
        "      <td>Dec 18, 2015</td>\n",
        "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Lucasfilm</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -98,6 +334,7 @@
        "      <td>4,662</td>\n",
        "      <td>Apr 26, 2019</td>\n",
        "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Marvel Comics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -109,6 +346,7 @@
        "      <td>4,336</td>\n",
        "      <td>Dec 17, 2021</td>\n",
        "      <td>Sony Pictures Releasing</td>\n",
+       "      <td>Marvel Comics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -120,6 +358,7 @@
        "      <td>4,084</td>\n",
        "      <td>Feb 16, 2018</td>\n",
        "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Marvel Comics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -131,6 +370,7 @@
        "      <td>4,474</td>\n",
        "      <td>Apr 27, 2018</td>\n",
        "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Marvel Comics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -142,6 +382,7 @@
        "      <td>4,349</td>\n",
        "      <td>May 4, 2012</td>\n",
        "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Marvel Comics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -153,6 +394,7 @@
        "      <td>4,232</td>\n",
        "      <td>Dec 15, 2017</td>\n",
        "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Lucasfilm</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -164,6 +406,7 @@
        "      <td>4,410</td>\n",
        "      <td>Jun 15, 2018</td>\n",
        "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Pixar</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -175,6 +418,7 @@
        "      <td>4,157</td>\n",
        "      <td>Dec 16, 2016</td>\n",
        "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Lucasfilm</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -186,6 +430,7 @@
        "      <td>4,406</td>\n",
        "      <td>Dec 20, 2019</td>\n",
        "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Lucasfilm</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -197,6 +442,7 @@
        "      <td>4,305</td>\n",
        "      <td>Jun 17, 2016</td>\n",
        "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Pixar</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -208,6 +454,7 @@
        "      <td>4,440</td>\n",
        "      <td>Nov 22, 2019</td>\n",
        "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Walt Disney Animation Studios</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -219,6 +466,7 @@
        "      <td>4,276</td>\n",
        "      <td>May 1, 2015</td>\n",
        "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Marvel Comics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -230,6 +478,7 @@
        "      <td>4,396</td>\n",
        "      <td>Nov 11, 2022</td>\n",
        "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Marvel Comics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -241,6 +490,7 @@
        "      <td>4,575</td>\n",
        "      <td>Jun 21, 2019</td>\n",
        "      <td>Walt Disney Studios Motion Pictures</td>\n",
+       "      <td>Pixar</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -281,25 +531,25 @@
        "13        4,396     $181,339,761                4,396  Nov 11, 2022   \n",
        "14        4,575     $120,908,065                4,575  Jun 21, 2019   \n",
        "\n",
-       "                                 Studio  \n",
-       "0   Walt Disney Studios Motion Pictures  \n",
-       "1   Walt Disney Studios Motion Pictures  \n",
-       "2               Sony Pictures Releasing  \n",
-       "3   Walt Disney Studios Motion Pictures  \n",
-       "4   Walt Disney Studios Motion Pictures  \n",
-       "5   Walt Disney Studios Motion Pictures  \n",
-       "6   Walt Disney Studios Motion Pictures  \n",
-       "7   Walt Disney Studios Motion Pictures  \n",
-       "8   Walt Disney Studios Motion Pictures  \n",
-       "9   Walt Disney Studios Motion Pictures  \n",
-       "10  Walt Disney Studios Motion Pictures  \n",
-       "11  Walt Disney Studios Motion Pictures  \n",
-       "12  Walt Disney Studios Motion Pictures  \n",
-       "13  Walt Disney Studios Motion Pictures  \n",
-       "14  Walt Disney Studios Motion Pictures  "
+       "                                 Studio                          Brand  \n",
+       "0   Walt Disney Studios Motion Pictures                      Lucasfilm  \n",
+       "1   Walt Disney Studios Motion Pictures                  Marvel Comics  \n",
+       "2               Sony Pictures Releasing                  Marvel Comics  \n",
+       "3   Walt Disney Studios Motion Pictures                  Marvel Comics  \n",
+       "4   Walt Disney Studios Motion Pictures                  Marvel Comics  \n",
+       "5   Walt Disney Studios Motion Pictures                  Marvel Comics  \n",
+       "6   Walt Disney Studios Motion Pictures                      Lucasfilm  \n",
+       "7   Walt Disney Studios Motion Pictures                          Pixar  \n",
+       "8   Walt Disney Studios Motion Pictures                      Lucasfilm  \n",
+       "9   Walt Disney Studios Motion Pictures                      Lucasfilm  \n",
+       "10  Walt Disney Studios Motion Pictures                          Pixar  \n",
+       "11  Walt Disney Studios Motion Pictures  Walt Disney Animation Studios  \n",
+       "12  Walt Disney Studios Motion Pictures                  Marvel Comics  \n",
+       "13  Walt Disney Studios Motion Pictures                  Marvel Comics  \n",
+       "14  Walt Disney Studios Motion Pictures                          Pixar  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
