move datasets to datasets folder

--- a/combine.ipynb
+++ b/combine.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -228,21 +228,21 @@
        "[211 rows x 9 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Marvel Comics, Lucasfilm, Pixar, Walt Disney Animation Studios, Blue Sky Studios, Disney Channel, DisneyToon Studios, Disneynature\n",
-    "marvel = pd.read_csv('marvel_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
-    "lucas = pd.read_csv('lucasfilm_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
-    "pixar = pd.read_csv('pixar_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
-    "disney_animation = pd.read_csv('disney_animation_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
-    "blue_sky = pd.read_csv('blue_sky_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
-    "disney_channel = pd.read_csv('disney_channel_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
-    "disneytoon = pd.read_csv('disneytoon_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
-    "disneynature = pd.read_csv('disneynature_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
+    "marvel = pd.read_csv('datasets/marvel_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
+    "lucas = pd.read_csv('datasets/lucasfilm_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
+    "pixar = pd.read_csv('datasets/pixar_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
+    "disney_animation = pd.read_csv('datasets/disney_animation_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
+    "blue_sky = pd.read_csv('datasets/blue_sky_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
+    "disney_channel = pd.read_csv('datasets/disney_channel_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
+    "disneytoon = pd.read_csv('datasets/disneytoon_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
+    "disneynature = pd.read_csv('datasets/disneynature_movies.csv', usecols=lambda column: column != 'Unnamed: 0')\n",
     "\n",
     "marvel['Brand'] = 'Marvel Comics'\n",
     "lucas['Brand'] = 'Lucasfilm'\n",
@@ -567,11 +567,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "disney_sorted.to_csv(\"disney_owned_movies.csv\")"
+    "disney_sorted.to_csv(\"datasets/disney_owned_movies.csv\")"
    ]
   }
  ],
