--- a/get_data_blue_sky.ipynb
+++ b/get_data_blue_sky.ipynb
@@ -320,11 +320,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('blue_sky_movies.csv')"
+    "df.to_csv('datasets/blue_sky_movies.csv')"
    ]
   }
  ],
