--- a/get_data_disney.ipynb
+++ b/get_data_disney.ipynb
@@ -616,7 +616,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dis62_df.to_csv('all_disney_stocks.csv')"
+    "dis62_df.to_csv('datasets/all_disney_stocks.csv')"
    ]
   }
  ],
