--- a/get_data_disney_channel.ipynb
+++ b/get_data_disney_channel.ipynb
@@ -269,7 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('disney_channel_movies.csv')"
+    "df.to_csv('datasets/disney_channel_movies.csv')"
    ]
   }
  ],
