--- a/get_data_disneynature.ipynb
+++ b/get_data_disneynature.ipynb
@@ -259,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('disneynature_movies.csv')"
+    "df.to_csv('datasets/disneynature_movies.csv')"
    ]
   }
  ],
