--- a/get_data_disneytoon.ipynb
+++ b/get_data_disneytoon.ipynb
@@ -269,7 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('disneytoon_movies.csv')"
+    "df.to_csv('datasets/disneytoon_movies.csv')"
    ]
   }
  ],
