--- a/get_data_lucasfilm.ipynb
+++ b/get_data_lucasfilm.ipynb
@@ -773,7 +773,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('lucasfilm_movies.csv')"
+    "df.to_csv('datasets/lucasfilm_movies.csv')"
    ]
   }
  ],
