--- a/get_data_marvel.ipynb
+++ b/get_data_marvel.ipynb
@@ -314,7 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('marvel_movies.csv')"
+    "df.to_csv('datasets/marvel_movies.csv')"
    ]
   }
  ],
