--- a/get_data_pixar.ipynb
+++ b/get_data_pixar.ipynb
@@ -605,7 +605,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('pixar_movies.csv')"
+    "df.to_csv('datasets/pixar_movies.csv')"
    ]
   }
  ],
