--- a/get_data_walt_disney_animation.ipynb
+++ b/get_data_walt_disney_animation.ipynb
@@ -367,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('disney_animation_movies.csv')"
+    "df.to_csv('datasets/disney_animation_movies.csv')"
    ]
   }
  ],
