fix duplicates in marvel data

--- a/get_data_marvel.ipynb
+++ b/get_data_marvel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>78</th>\n",
+       "      <th>71</th>\n",
        "      <td>72</td>\n",
        "      <td>Columbia 100th Anniversary SeriesColumbia 100t...</td>\n",
        "      <td>$6,013,515</td>\n",
@@ -252,7 +252,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>83 rows × 8 columns</p>\n",
+       "<p>76 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -263,7 +263,7 @@
        "3     4                             Avengers: Infinity War  $678,815,482   \n",
        "4     5                                       The Avengers  $623,357,910   \n",
        "..  ...                                                ...           ...   \n",
-       "78   72  Columbia 100th Anniversary SeriesColumbia 100t...    $6,013,515   \n",
+       "71   72  Columbia 100th Anniversary SeriesColumbia 100t...    $6,013,515   \n",
        "79   80                                           Inhumans    $1,521,787   \n",
        "80   81             Guardians of the Galaxy2020 Re-release      $542,000   \n",
        "81   82                            Iron Man2020 Re-release      $430,000   \n",
@@ -276,7 +276,7 @@
        "3         4,474     $257,698,183                4,474  Apr 27, 2018   \n",
        "4         4,349     $207,438,708                4,349   May 4, 2012   \n",
        "..          ...              ...                  ...           ...   \n",
-       "78          466          $18,856                  466  Apr 15, 2024   \n",
+       "71          466          $18,856                  466  Apr 15, 2024   \n",
        "79          393       $1,135,440                  393   Sep 1, 2017   \n",
        "80        1,560         $406,000                1,560  Nov 13, 2020   \n",
        "81          462         $430,000                  462  Jul 17, 2020   \n",
@@ -289,28 +289,28 @@
        "3   Walt Disney Studios Motion Pictures  \n",
        "4   Walt Disney Studios Motion Pictures  \n",
        "..                                  ...  \n",
-       "78              Sony Pictures Releasing  \n",
+       "71              Sony Pictures Releasing  \n",
        "79                                 IMAX  \n",
        "80  Walt Disney Studios Motion Pictures  \n",
        "81                 Walt Disney Pictures  \n",
        "82                 Walt Disney Pictures  \n",
        "\n",
-       "[83 rows x 8 columns]"
+       "[76 rows x 8 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.DataFrame({'Rank': ranks, 'Title': titles, 'Gross Income': gross, 'Max Theaters': max_theaters, 'Opening Earnings': opening_earnings, 'Opening Num Theaters': opening_num_thtrs, 'Release Dates': release_dates, 'Studio': studios})\n",
+    "df = pd.DataFrame({'Rank': ranks, 'Title': titles, 'Gross Income': gross, 'Max Theaters': max_theaters, 'Opening Earnings': opening_earnings, 'Opening Num Theaters': opening_num_thtrs, 'Release Dates': release_dates, 'Studio': studios}).drop_duplicates()\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
