--- a/get_data_marvel.ipynb
+++ b/get_data_marvel.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "      <td>Sony Pictures Releasing</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>79</th>\n",
+       "      <th>72</th>\n",
        "      <td>80</td>\n",
        "      <td>Inhumans</td>\n",
        "      <td>$1,521,787</td>\n",
@@ -218,7 +218,7 @@
        "      <td>IMAX</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>80</th>\n",
+       "      <th>73</th>\n",
        "      <td>81</td>\n",
        "      <td>Guardians of the Galaxy2020 Re-release</td>\n",
        "      <td>$542,000</td>\n",
@@ -229,7 +229,7 @@
        "      <td>Walt Disney Studios Motion Pictures</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>81</th>\n",
+       "      <th>74</th>\n",
        "      <td>82</td>\n",
        "      <td>Iron Man2020 Re-release</td>\n",
        "      <td>$430,000</td>\n",
@@ -240,7 +240,7 @@
        "      <td>Walt Disney Pictures</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>82</th>\n",
+       "      <th>75</th>\n",
        "      <td>83</td>\n",
        "      <td>Black Panther2020 Re-release</td>\n",
        "      <td>$367,000</td>\n",
@@ -264,10 +264,10 @@
        "4     5                                       The Avengers  $623,357,910   \n",
        "..  ...                                                ...           ...   \n",
        "71   72  Columbia 100th Anniversary SeriesColumbia 100t...    $6,013,515   \n",
-       "79   80                                           Inhumans    $1,521,787   \n",
-       "80   81             Guardians of the Galaxy2020 Re-release      $542,000   \n",
-       "81   82                            Iron Man2020 Re-release      $430,000   \n",
-       "82   83                       Black Panther2020 Re-release      $367,000   \n",
+       "72   80                                           Inhumans    $1,521,787   \n",
+       "73   81             Guardians of the Galaxy2020 Re-release      $542,000   \n",
+       "74   82                            Iron Man2020 Re-release      $430,000   \n",
+       "75   83                       Black Panther2020 Re-release      $367,000   \n",
        "\n",
        "   Max Theaters Opening Earnings Opening Num Theaters Release Dates  \\\n",
        "0         4,662     $357,115,007                4,662  Apr 26, 2019   \n",
@@ -277,10 +277,10 @@
        "4         4,349     $207,438,708                4,349   May 4, 2012   \n",
        "..          ...              ...                  ...           ...   \n",
        "71          466          $18,856                  466  Apr 15, 2024   \n",
-       "79          393       $1,135,440                  393   Sep 1, 2017   \n",
-       "80        1,560         $406,000                1,560  Nov 13, 2020   \n",
-       "81          462         $430,000                  462  Jul 17, 2020   \n",
-       "82          421         $367,000                  421  Jul 10, 2020   \n",
+       "72          393       $1,135,440                  393   Sep 1, 2017   \n",
+       "73        1,560         $406,000                1,560  Nov 13, 2020   \n",
+       "74          462         $430,000                  462  Jul 17, 2020   \n",
+       "75          421         $367,000                  421  Jul 10, 2020   \n",
        "\n",
        "                                 Studio  \n",
        "0   Walt Disney Studios Motion Pictures  \n",
@@ -290,27 +290,27 @@
        "4   Walt Disney Studios Motion Pictures  \n",
        "..                                  ...  \n",
        "71              Sony Pictures Releasing  \n",
-       "79                                 IMAX  \n",
-       "80  Walt Disney Studios Motion Pictures  \n",
-       "81                 Walt Disney Pictures  \n",
-       "82                 Walt Disney Pictures  \n",
+       "72                                 IMAX  \n",
+       "73  Walt Disney Studios Motion Pictures  \n",
+       "74                 Walt Disney Pictures  \n",
+       "75                 Walt Disney Pictures  \n",
        "\n",
        "[76 rows x 8 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.DataFrame({'Rank': ranks, 'Title': titles, 'Gross Income': gross, 'Max Theaters': max_theaters, 'Opening Earnings': opening_earnings, 'Opening Num Theaters': opening_num_thtrs, 'Release Dates': release_dates, 'Studio': studios}).drop_duplicates()\n",
+    "df = pd.DataFrame({'Rank': ranks, 'Title': titles, 'Gross Income': gross, 'Max Theaters': max_theaters, 'Opening Earnings': opening_earnings, 'Opening Num Theaters': opening_num_thtrs, 'Release Dates': release_dates, 'Studio': studios}).drop_duplicates().reset_index(drop=True)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
